Struggling to make footer stick to bottom. Having issue of cards bleeding over footer. Will try to find solution.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,8 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
-  max-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  
 }
 
 .header {
@@ -23,6 +29,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid blue;
+}
+
+.footer-position {
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar {
@@ -32,6 +46,7 @@ body {
   box-sizing: border-box;
   border: 1px solid black;
   display: flex;
+  flex-shrink: 0;
 }
 
 .sidebar-container {
@@ -42,9 +57,9 @@ body {
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
+  border-radius: 25px;
   height: 250px;
-  width: 350px;
+  width: 375px;
   display: flex;
   flex-wrap: wrap;
   padding: 15px;
@@ -62,17 +77,21 @@ body {
   border: 1px solid red;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex: 1;
-  gap: 15px;
-  padding: 25px;
+  gap: 30px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 75px;
 }
 
 .content-container {
   border: 5px dashed black;
   display: flex;
   align-items: stretch;
-  height: 80vh;
+  height: 81vh;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
